k8s/dev/deployment-budgt-account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budgt-account-service
  namespace: budgt-dev
  labels:
    app: budgt-account-service
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budgt-account-service
  template:
    metadata:
      labels:
        app: budgt-account-service
    spec:
      containers:
        - name: budgt-account-service
          image: "budgt/budgt-account-service:edge"
          ports:
            - containerPort: 1332
              protocol: TCP
          imagePullPolicy: Always
