k8s/dev/deployment-budgt-config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budgt-config-server
  namespace: budgt-dev
  labels:
    app: budgt-config-server
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budgt-config-server
  template:
    metadata:
      labels:
        app: budgt-config-server
    spec:
      containers:
        - name: budgt-config-server
          image: "budgt/budgt-config-server:edge"
          ports:
            - containerPort: 1339
              protocol: TCP
          imagePullPolicy: Always
      volumes:
        - name: service
          emptyDir: {}
        - name: git-secret
          secret:
            defaultMode: 256
            secretName: git-creds # your-ssh-key
