k8s/dev/deployment-budgt-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budgt-gateway
  namespace: budgt-dev
  labels:
    app: budgt-gateway
    tier: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budgt-gateway
  template:
    metadata:
      labels:
        app: budgt-gateway
    spec:
      containers:
        - name: budgt-gateway
          image: "budgt/budgt-gateway:edge"
          ports:
            - containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
