k8s/dev/service-budgt-category-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: budgt-category-service
  namespace: budgt-dev
spec:
  selector:
    app: budgt-category-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1338
