k8s/dev/service-budgt-config-server.yaml
kind: Service
apiVersion: v1
metadata:
  name: budgt-config-server
  namespace: budgt-dev
spec:
  selector:
    app: budgt-config-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1339
