k8s/dev/service-budgt-frontend.yaml
kind: Service
apiVersion: v1
metadata:
  name: budgt-frontend
  namespace: budgt-dev
spec:
  selector:
    app: budgt-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1380
