k8s/dev/service-budgt-gateway.yaml
kind: Service
apiVersion: v1
metadata:
  name: budgt-gateway
  namespace: budgt-dev
spec:
  selector:
    app: budgt-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
