k8s/dev/service-budgt-mongo-db.yaml
kind: Service
apiVersion: v1
metadata:
  name: budgt-mongo-db
  namespace: budgt-dev
spec:
  selector:
    app: budgt-mongo-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
